--- a/PrimeiraApi/PrimeiraApi.csproj
+++ b/PrimeiraApi/PrimeiraApi.csproj
@@ -14,4 +14,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
